--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ body {
 }
 
 .title {
-  text-align: center;
   margin-bottom: 21px;
 }
 
@@ -30,7 +29,6 @@ body {
 h1,
 h2,
 h3 {
-  text-align: center;
   margin: 0;
   padding: 0;
   font-weight: 500;
@@ -48,6 +46,8 @@ h2 {
 h3 {
   font-size: 16px;
 }
+
+p {font-size: 12px;}
 
 a {
   color: #adbcbe;
