--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ a {
 pre.prettyprint {
   display: block;
   background-color: #333;
+  padding: 10px;
 }
 pre .nocode {
   background-color: none;
